# LabProg

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Observer.h  Resource.cpp  Resource.h  Resources.cpp  Resources.h  Subject.h  main.cpp
tests/: CMakeLists.txt  Tests.cpp
